# api_service/api_service/models/__init__.py
@@ -1,4 +1,5 @@
 from .users import User
+from .summarizations import Summarization
 from .base import db
 
-db.create_tables([User])
+db.create_tables([User, Summarization])
